Add layout and first two paras

--- a/_posts/2020-02-02-week01.md
+++ b/_posts/2020-02-02-week01.md
@@ -4,7 +4,18 @@ title: Week 1
 ---
 
 
-This text should be replaced by your first post.
+**Entry Prompt: Explain "why you decided to take a course in open source software."**
 
-The easiest way to make your first post is to edit this file.
+Addressing my motivation for taking a course in open source software serves two purposes. First, there is, in my opinion, an inherent value in transparency here, both to my fellow classmates, as well as to whoever may stumble across this blog! Second, there is an undeniable benefit for me: a greater self-awareness which derives from investing the time to gather my beginner thoughts and values. Who knows, perhaps I will also get a good chuckle out of looking back on my early thoughts at the conclusion of this course. Upon reflection on how to actually explain my motivation, it appears that this too, for the sake of depth, would be best split into two parts: nascent interests that predate my time at Hunter College, and then a trajectory across my studies that almost guaranteed I would take this course. 
+
+### Pre-Hunter College Days:
+Long before I arrived at Hunter College or my thoughts had even turned to pursuing a career in computer science, I was nonetheless aware of, and often captivated by, various competing trains of thought in the tech world. While I confess that 
+
+
+### During CS Studies:
+
+Licensing 
+OpenCV/ROS
+Linux
+Red Hat / IBM - big blue of all companies
 
