Fix week 1 blog paragraph 3

--- a/_posts/2020-02-02-week01.md
+++ b/_posts/2020-02-02-week01.md
@@ -12,7 +12,7 @@ Addressing my motivation for taking a course in open source software serves two 
 Long before I arrived at Hunter College or my thoughts had even turned to pursuing a career in computer science, I was nonetheless aware of, and often interested in, various competing trains of thought in the tech world. While I confess that at the time I had no knowledge of Richard Stallman and Linux was still that *other* operating system which only the techies used, my knowledge of early personal computing included the great divide between the Steve Wozniaks and the Steve Jobs of the world. (Perhaps I am already revealing my enjoyment of Apple machines a tad too much...) Whereas Wozniak has been revered as a benevolent and generous technical god who wanted to give away his work, Jobs, along with Gates, have been, rightly or wrongly, generally accused for having "invented" selling software. The spirit of community, sharing and fascination with what others can do with *your* code or *your* work that continues from those early days of software swap meets right up to today captivated me. But up until changing careers, it remained just that: a side interest.
 
 ### During CS Studies:
-Studying computer science at Hunter, one, for better or worse (for the better in my humble opinion), has little choice but to quickly become acquainted with UNIX/Linux, and you also learn the language(s) at the heart of modern Linux (C/C++). Whether or not this goes beyond obligation depends on the student, but it is hard to ignore (I couldn't) the exciting revelation that you are using an operating system with so much freedom. The particular Linux distribution and licensing may restrict the following, but generally certain axioms hold. You, as the user, can examine or change anything. Anything. Moreover, you can then make that into your own brand of Linux, your own distribution. Given enough time and knowledge, you may be able to make meaningful contributions to the big distributions. Not after you get hired...but perhaps because your contribution as an individual is a great idea or fixes some oustanding issue. 
+Studying computer science at Hunter, one, for better or worse (for the better in my humble opinion), has little choice but to quickly become acquainted with UNIX/Linux, and you also learn the language(s) at the heart of modern Linux (C/C++). Whether or not this goes beyond obligation depends on the student, but it is hard to ignore (I couldn't) the exciting revelation that you are using an operating system with so much freedom. The particular Linux distribution and licensing may restrict the following, but generally certain axioms hold. You, as the user, can examine or change anything. Anything. Moreover, you can then make that into your own brand of Linux, your own distribution. Given enough time and knowledge, you may be able to make meaningful contributions to the big distributions. Not because you just got hired at the producing company...but perhaps because your contribution as an individual is a great idea or fixes some oustanding issue. 
 
 In my case, I have also come to know and use open source libraries, namely OpenCV (Open Computer Vision) and ROS (Robot Operating System), both at the Computer Vision and Graphics Lab and in my own side studies. These offer whole other frontiers for meaningful community contribution. It all seems so exciting...but to be honest, I still don't quite know where or how to begin. Having acquired some knowledge of the Git workflow and Github issues, I have a better sense of where to start, but it still seems like an intimidating landscape, and the world of software licensing is, admittedly, still a realm of the unknown for me. 
 
