Add other course activity to week 1 blog

--- a/_posts/2020-02-02-week01.md
+++ b/_posts/2020-02-02-week01.md
@@ -2,7 +2,7 @@
 layout: post
 title: Week 1
 ---
-
+# Response to Weekly Prompt:
 
 **Entry Prompt: Explain "why you decided to take a course in open source software."**
 
@@ -18,3 +18,6 @@ In my case, I have also come to know and use open source libraries, namely OpenC
 
 ### Conclusion
 This has all been to say that my taking this course has, in a way, been a long time in the making. Personally, I have wanted to get involved in open source software for years. Moreover, open source seems to be the future, with a significant part of the industry already headed in that direction. If IBM - Big Blue, the closed source behemoth of the 1980s - of all companies, can [join forces with Red Hat](https://www.ibm.com/cloud/redhat) and support open source, then I want in too.
+
+# Other Course-Related Activity:
+As it is the first week of the semester, I have not yet engaged in other course-related activity outside of class (such as making contributions to open source projects). However, I will be reading the introductory material that will enable me to do so. 
