Add review of Jupyter project

--- a/_posts/2020-02-23-week04.md
+++ b/_posts/2020-02-23-week04.md
@@ -3,6 +3,32 @@ layout: post
 title: Week 4
 ---
 
+This week I will be listing open source software projects I have reviewed as 
+candidates for contributing to in the Open Source Software course's final 
+project. 
+
+### OpenCV
+
+
+### ROS
+
+
+### Jupyter
+In class this past week the class was split into groups and my group was 
+assigned to review the Jupyter project. Jupyter is a large project surrounding
+"interactive computing" but is perhaps best known for its popular product,
+Jupyter Notebook, of which I am a fan and a user. Allowing the combination of
+markdown and code "cells" (which can be run in isolation), Jupyter Notebook 
+offers a tool for experimentation and presentation, which is particularly 
+useful in machine learning, data sciences and any science which involves data
+processing and visualization. While perhaps not my first choice, it checks off
+a number of the below criteria and is a leading contender.
+
+- [x] Documents: critical documents present, readable, thorough
+- [x] Project Tools/Technology: familiar language, no specialized knowledge 
+needed, good issue tracker system, and communication
+- [x] Project Activity: a healthy and manageable amount of activity
+- [x] Responsive and Nice Community (Check out this example!)[https://github.com/jupyter/notebook/pull/5136]
 
 
 # Other Course-Related Activity:
