Add review of ROS

--- a/_posts/2020-02-23-week04.md
+++ b/_posts/2020-02-23-week04.md
@@ -5,13 +5,39 @@ title: Week 4
 
 This week I will be listing open source software projects I have reviewed as 
 candidates for contributing to in the Open Source Software course's final 
-project. 
+project. Below each I will list a very, very reduced form of some of the 
+defining characteristics of an open source project, and check off where a 
+project does, or does not, meet these criteria.
 
 ### OpenCV
 
 
-### ROS
+### Robot Operating System (ROS)
+ROS is, to my knowledge, *the* big robotics software project, not just the big
+*open source* robotics project. Just a couple of months ago, NASA put out a 
+challenge which required the use of it. Personally, I have been working with it
+since last summer, and am therefore disappointed, though not terribly surprised
+that the project doesn't appear to check all the boxes below. ROS documentation
+is more generally all over the place, literally and in terms of quality. There 
+are an abundance of repositories and not only is not clear where to begin, not
+every repository seems to have a license, readme, or even clues on where else 
+to look. While I use C++ and Python, ROS is a very complex undertaking and my 
+impression is, depending on where one tries to launch into it, contributing 
+will require a lot of background knowledge. Moreover, while the parts of ROS 
+seem fairly active, they also seem constrained to a small contributor core,
+likely because of the aforementioned need for expert knowledge. 
 
+All in all, I haven't checked off most of the boxes below, because while the
+community is active and welcoming, it seems like a daunting project. That said,
+I will have to keep my eye open for perhaps a single repository / component of 
+the ROS world that may serve as the perfect in and which otherwise checks off
+these boxes.
+
+- [ ] Documents: critical documents present, readable, thorough
+- [ ] Project Tools/Technology: familiar language, no specialized knowledge 
+needed, good issue tracker system, and communication
+- [ ] Project Activity: a healthy and manageable amount of activity
+- [x] Responsive and Nice Community 
 
 ### Jupyter
 In class this past week the class was split into groups and my group was 
