Add review of OpenCV

--- a/_posts/2020-02-23-week04.md
+++ b/_posts/2020-02-23-week04.md
@@ -10,7 +10,23 @@ defining characteristics of an open source project, and check off where a
 project does, or does not, meet these criteria.
 
 ### OpenCV
+OpenCV, along with ROS, are the two open source projects I had in mind for 
+potential future contributions upon entering this course. It is a popular, and 
+widely used, computer vision library which has been in development for years 
+and has multiple language support, namely C++ and Python. The main OpenCV 
+repository appears to be well documented (though it is missing a code of 
+conduct) and active; there are a large number of contributors but it is a bit
+concerning to see so much activity surrounding the top contributor. There is no
+denying that some specialized knowledge is likely to come in to play with any 
+work with OpenCV, so it is with some hesitation that I check off the project 
+tools/technology criteria below. That said, at this early stage at least, 
+OpenCV seems like a viable project.
 
+- [x] Documents: critical documents present, readable, thorough
+- [x] Project Tools/Technology: familiar language, no specialized knowledge 
+needed, good issue tracker system, and communication
+- [x] Project Activity: a healthy and manageable amount of activity
+- [x] Responsive and Nice Community 
 
 ### Robot Operating System (ROS)
 ROS is, to my knowledge, *the* big robotics software project, not just the big
