Add contributions to weekly blog

--- a/_posts/2020-02-23-week04.md
+++ b/_posts/2020-02-23-week04.md
@@ -74,3 +74,4 @@ needed, good issue tracker system, and communication
 
 
 # Other Course-Related Activity:
+- This week I made two additional OpenStreetMap contributions and also did my first blog editing activity. Details and links for these can be found on the Contributions page. 
