--- a/_posts/2020-02-23-week04.md
+++ b/_posts/2020-02-23-week04.md
@@ -4,21 +4,21 @@ title: Week 4
 ---
 
 This week I will be listing open source software projects I have reviewed as 
-candidates for contributing to in the Open Source Software course's final 
+candidates for receiving contributions in the Open Source Software course's final 
 project. Below each I will list a very, very reduced form of some of the 
 defining characteristics of an open source project, and check off where a 
 project does, or does not, meet these criteria.
 
 ### OpenCV
-OpenCV, along with ROS, are the two open source projects I had in mind for 
-potential future contributions upon entering this course. It is a popular, and 
-widely used, computer vision library which has been in development for years 
+OpenCV, along with ROS, is one of the two open source projects I had in mind for 
+potential future contributions upon entering this course. It is a popular and 
+widely used computer vision library which has been in development for years 
 and has multiple language support, namely C++ and Python. The main OpenCV 
 repository appears to be well documented (though it is missing a code of 
-conduct) and active; there are a large number of contributors but it is a bit
+conduct) and active; there are a large number of contributors, but it is a bit
 concerning to see so much activity surrounding the top contributor. There is no
-denying that some specialized knowledge is likely to come in to play with any 
-work with OpenCV, so it is with some hesitation that I check off the project 
+denying that some specialized knowledge is likely to come into play with any 
+work on OpenCV, so it is with some hesitation that I check off the project 
 tools/technology criteria below. That said, at this early stage at least, 
 OpenCV seems like a viable project.
 
@@ -32,12 +32,12 @@ needed, good issue tracker system, and communication
 ROS is, to my knowledge, *the* big robotics software project, not just the big
 *open source* robotics project. Just a couple of months ago, NASA put out a 
 challenge which required the use of it. Personally, I have been working with it
-since last summer, and am therefore disappointed, though not terribly surprised
+since last summer, and am therefore disappointed, though not terribly surprised,
 that the project doesn't appear to check all the boxes below. ROS documentation
 is more generally all over the place, literally and in terms of quality. There 
-are an abundance of repositories and not only is not clear where to begin, not
+are an abundance of repositories and not only is it not clear where to begin, but not
 every repository seems to have a license, readme, or even clues on where else 
-to look. While I use C++ and Python, ROS is a very complex undertaking and my 
+to look. Even though I use C++ and Python, ROS is a very complex undertaking and my 
 impression is, depending on where one tries to launch into it, contributing 
 will require a lot of background knowledge. Moreover, while the parts of ROS 
 seem fairly active, they also seem constrained to a small contributor core,
@@ -56,21 +56,21 @@ needed, good issue tracker system, and communication
 - [x] Responsive and Nice Community 
 
 ### Jupyter
-In class this past week the class was split into groups and my group was 
+In class this past week the students were split into groups and my group was 
 assigned to review the Jupyter project. Jupyter is a large project surrounding
 "interactive computing" but is perhaps best known for its popular product,
 Jupyter Notebook, of which I am a fan and a user. Allowing the combination of
 markdown and code "cells" (which can be run in isolation), Jupyter Notebook 
 offers a tool for experimentation and presentation, which is particularly 
-useful in machine learning, data sciences and any science which involves data
+useful in machine learning, data sciences, and any science which involves data
 processing and visualization. While perhaps not my first choice, it checks off
-a number of the below criteria and is a leading contender.
+a number of the criteria below and is a leading contender.
 
 - [x] Documents: critical documents present, readable, thorough
 - [x] Project Tools/Technology: familiar language, no specialized knowledge 
 needed, good issue tracker system, and communication
 - [x] Project Activity: a healthy and manageable amount of activity
-- [x] Responsive and Nice Community (Check out this example!)[https://github.com/jupyter/notebook/pull/5136]
+- [x] Responsive and Nice Community [Check out this example!](https://github.com/jupyter/notebook/pull/5136)
 
 
 # Other Course-Related Activity:
