Add blog contributions

--- a/_posts/2020-03-01-week05.md
+++ b/_posts/2020-03-01-week05.md
@@ -6,3 +6,4 @@ title: Week 5
 
 
 # Other Course-Related Activity:
+This week I proposed edits to [Steven's blog](https://github.com/hunter-college-ossd-spr-2020/Nannaquin-weekly/pull/2) and [Liulan's blog](https://github.com/hunter-college-ossd-spr-2020/liulanz-weekly/pull/6). 
