Add more to contributions section

--- a/_posts/2020-03-01-week05.md
+++ b/_posts/2020-03-01-week05.md
@@ -6,4 +6,4 @@ title: Week 5
 
 
 # Other Course-Related Activity:
-This week I proposed edits to [Steven's blog](https://github.com/hunter-college-ossd-spr-2020/Nannaquin-weekly/pull/2) and [Liulan's blog](https://github.com/hunter-college-ossd-spr-2020/liulanz-weekly/pull/6). 
+This week I proposed edits to [Steven's blog](https://github.com/hunter-college-ossd-spr-2020/Nannaquin-weekly/pull/2) and [Liulan's blog](https://github.com/hunter-college-ossd-spr-2020/liulanz-weekly/pull/6). I also [added my favorite local Mexican restaurant](https://www.openstreetmap.org/changeset/81634942) to OpenStreetMaps. If you've noticed that many of my OSM contributions are food related, well I do consider myself a bit of a foodie! Also, I like to think it helps these businesses, which I would like to support, with discovery, which seems to be a considerable issue for new, and even some veteran, restaurants around me. 
