Add first paragraph of first draft

--- a/_posts/2020-03-01-week05.md
+++ b/_posts/2020-03-01-week05.md
@@ -3,7 +3,12 @@ layout: post
 title: Week 5
 ---
 
+# Evaluating a Week of Evaluations:
+To review, this week has been a week of reviews...no more puns from here on out, I promise. In all seriousness, this week's classes were all about going through the rigors of evaluating FOSS projects in a more comprehensive and in-depth fashion. In essence, it was a step beyond only checking for the basic necessities - or, when they are missing, the obvious red flags - such as a license, contributing or code of conduct document. These activities pushed all of us to get into the guts of what makes a project viable for an outsider to become a contributor. Can you set up the development environment? How well documented and readable is the code? Significantly, what does the life of an issue or pull request in the project look like? For an outsider well tagged issues and timely, helpful and appreciative responses from maintainers can be the difference between a great FOSS experience and a discouraging FOSS experience. 
 
+
+
+# Top Three FOSS Projects:
 
 # Other Course-Related Activity:
 This week I proposed edits to [Steven's blog](https://github.com/hunter-college-ossd-spr-2020/Nannaquin-weekly/pull/2) and [Liulan's blog](https://github.com/hunter-college-ossd-spr-2020/liulanz-weekly/pull/6). I also [added my favorite local Mexican restaurant](https://www.openstreetmap.org/changeset/81634942) to OpenStreetMaps. If you've noticed that many of my OSM contributions are food related, well I do consider myself a bit of a foodie! Also, I like to think it helps these businesses, which I would like to support, with discovery, which seems to be a considerable issue for new, and even some veteran, restaurants around me. 
