--- a/_posts/2020-03-01-week05.md
+++ b/_posts/2020-03-01-week05.md
@@ -4,13 +4,14 @@ title: Week 5
 ---
 
 # Evaluating a Week of Evaluations:
-To review, this week has been a week of reviews...no more puns from here on out, I promise. In all seriousness, this week's classes were all about going through the rigors of evaluating FOSS projects in a more comprehensive and in-depth fashion. In essence, it was a step beyond only checking for the basic necessities - or, when they are missing, the obvious red flags - such as a license, contributing or code of conduct document. These activities pushed all of us to get into the guts of what makes a project viable for an outsider to become a contributor. Can you set up the development environment? How well documented and readable is the code? Significantly, what does the life of an issue or pull request in the project look like? For an outsider well tagged issues and timely, helpful and appreciative responses from maintainers can be the difference between a great FOSS experience and a discouraging FOSS experience. 
+To review, this week has been a week of reviews...no more puns from here on out, I promise. In all seriousness, this week's classes were all about going through the rigors of evaluating FOSS projects in a more comprehensive and in-depth fashion. For my part, this meant reviews of the GNOME Clocks and TEAMMATES projects. In essence, it was a step beyond only checking for the basic necessities - or, when they are missing, the obvious red flags - such as a license, contributing or code of conduct document. These activities pushed all of us to get into the guts of what makes a project viable for an outsider to become a contributor. Can you set up the development environment? How well documented and readable is the code? Significantly, what does the life of an issue or pull request in the project look like? For an outsider well tagged issues and timely, helpful and appreciative responses from maintainers can be the difference between a great FOSS experience and a discouraging FOSS experience. 
 
 The sheer breadth of reading and review required for such an evaluation can be difficult, but I found it to be a rewarding and enlightening experience. On the more technical side, figuring out how to perform filtering to determine the number of issues opened over the last several months takes a little investigation, but Github's documentation on [searching issues and pull requests](https://help.github.com/en/github/searching-for-information-on-github/searching-issues-and-pull-requests) is great, and I got some hands on experience with more advanced searching. There is also perhaps the hardest task of trying to give fair consideration to a project written in a language or languages with which you have little to no experience. This where close reading of documentation - both comments and design documents - comes in handy. A project such as TEAMMATES is great in this regard, offering a big-picture [design document](https://github.com/TEAMMATES/teammates/blob/master/docs/design.md) that helps a contributor who has little experience in Java (a notoriously verbose language) to get their bearings, whereas a project like GNOME Clocks, employing mostly Vala, appears to offer contributors familiar with C an easy entry, but disappoints on the documentation front. 
 
-On the less technical side, I got an interesting peek into the world of FOSS issue and pull request community interactions. 
+On the less technical side, I got an interesting peek into the world of FOSS issue and pull request community interactions. On the one hand, the deluge of requests to work on issues and thereby become first time contributors, or even just continue to serve as helpful veterans, is certainly inspiring. The same goes for the deep discussions and  appreciative responses from maintainers. This is the FOSS world at its best. On the other hand, I couldn't help notice how many issues had to be politely but firmly deflected or closed with yet another reminder for the contributor to review guidelines and procedures. It made me wonder how much burnout maintainers must suffer from and how severe the cascading effects can be. How far does the terse tone carry over into other discussions? If maintainers ignore or quickly shut down issues of little help or value, do those issues become misleading examples to an outside reviewer of the project, such as myself, of how the project is unwelcoming or unfriendly? One has to be a bit of a sleuth to not come to quick and shallow impressions of a project.
 
 # Top Three FOSS Projects:
+
 
 # Other Course-Related Activity:
 This week I proposed edits to [Steven's blog](https://github.com/hunter-college-ossd-spr-2020/Nannaquin-weekly/pull/2) and [Liulan's blog](https://github.com/hunter-college-ossd-spr-2020/liulanz-weekly/pull/6). I also [added my favorite local Mexican restaurant](https://www.openstreetmap.org/changeset/81634942) to OpenStreetMaps. If you've noticed that many of my OSM contributions are food related, well I do consider myself a bit of a foodie! Also, I like to think it helps these businesses, which I would like to support, with discovery, which seems to be a considerable issue for new, and even some veteran, restaurants around me. 
