--- a/_posts/2020-03-01-week05.md
+++ b/_posts/2020-03-01-week05.md
@@ -11,7 +11,7 @@ The sheer breadth of reading and review required for such an evaluation can be d
 On the less technical side, I got an interesting peek into the world of FOSS issue and pull request community interactions. On the one hand, the deluge of requests to work on issues and thereby become first time contributors, or even just continue to serve as helpful veterans, is certainly inspiring. The same goes for the deep discussions and  appreciative responses from maintainers. This is the FOSS world at its best. On the other hand, I couldn't help notice how many issues had to be politely but firmly deflected or closed with yet another reminder for the contributor to review guidelines and procedures. It made me wonder how much burnout maintainers must suffer from and how severe the cascading effects can be. How far does the terse tone carry over into other discussions? If maintainers ignore or quickly shut down issues of little help or value, do those issues become misleading examples to an outside reviewer of the project, such as myself, of how the project is unwelcoming or unfriendly? One has to be a bit of a sleuth to not come to quick and shallow impressions of a project.
 
 # Top Three FOSS Projects:
-As this semester flies by - what happened to February?! - I, like my classmates, am trying to come to terms with what would be *the* projects to which I can contribute. It is a tough question to wrangle with, but I do believe this week's activity helped me organize my priorities. As I see it, the leading four criteria for considering a project at this point, above all others are:
+As this semester flies by - what happened to February?! - I, like my classmates, am trying to come to terms with what would be *the* projects to which I can contribute. It is a tough question to wrangle with, but I do believe this week's activity helped me organize my priorities. As I see it, the leading five criteria for considering a project at this point, above all others are:
 - The activity of the project.
 - The amount of documentation present.
 - The clear identification of beginner issues.
