Slight wording change

--- a/_posts/2020-03-01-week05.md
+++ b/_posts/2020-03-01-week05.md
@@ -18,7 +18,7 @@ As this semester flies by - what happened to February?! - I, like my classmates,
 - The languages / development environment in use.
 - The installation process is manageable.
 
-A project can be very welcoming and have a great lighthearted community but if the project is inactive, offers no clear roadmap to the codebase, doesn't identify where newbies can contribute, is written in a language foreign to me, or I can't even get it to install, then it's going to be a difficult match. I imagine some may debate the second to last point, and I will admit that at least C-like languages don't pose an impossible challenge, but my experience with trying to learn languages under pressure and in a short amount of time rarely yields a good experience. (With my strong suits being Python and C++, I would prefer to stay within those worlds; light experience in JavaScript, however, may yet offer a bit of an out to other projects.) This does leave me in a bit of a jam, at least as far as the projects that have been listed in the class Wiki, evaluated by the class, or listed in my own review (OpenCV, ROS and Jupyter) go.  I have yet to see a project which truly checks off all five criteria. Therefore I have concluded that any project will necessarily involve gritting my teeth and grinding through the process of setting up a development environment and dealing with  thoroughly mixed quality issues, documentation and installation processes. 
+A project can be very welcoming and have a great lighthearted community but if the project is inactive, offers no clear roadmap to the codebase, doesn't identify where newbies can contribute, is written in a language foreign to me, or I can't even get it to install, then it's going to be a difficult match. I imagine some may debate the second to last point, and I will admit that at least C-like languages don't pose an impossible challenge, but my experience with trying to learn languages under pressure and in a short amount of time rarely yields a good experience. (With my strong suits being Python and C++, I would prefer to stay within those worlds; light experience in JavaScript, however, may yet offer a bit of an out to other projects.) This does leave me in a bit of a jam, at least as far as the projects that have been listed in the class Wiki, evaluated by the class, or listed in my own review (OpenCV, ROS and Jupyter) go. I have yet to see a project which truly comes close to checking off all five criteria. Therefore I have concluded that any project will necessarily involve gritting my teeth and grinding through the process of setting up a development environment and dealing with thoroughly mixed quality issues, documentation and installation processes. 
 
 At this time, my tentative top three projects on which I would be willing to work are:
 
