--- a/_posts/2020-03-08-week06.md
+++ b/_posts/2020-03-08-week06.md
@@ -5,3 +5,4 @@ title: Week 6
 
 
 # Other Course-Related Activity:
+This week I proposed [edits](https://github.com/hunter-college-ossd-spr-2020/Ks5810-weekly/pull/5) to and opened an [issue](https://github.com/hunter-college-ossd-spr-2020/Ks5810-weekly/issues/6) on [Keisuke's blog](https://hunter-college-ossd-spr-2020.github.io/Ks5810-weekly/). Continuing on my recent streak of adding nearby restaurants I enjoy and would like to support to OSM, I [added a local Italian restaurant](https://www.openstreetmap.org/changeset/81936488).
